@@ -58,9 +58,10 @@ example, 'int num[3]' means an array with 3 'int' elements. In some cases, an
 array can be of type 'misc' to indicate that not all of the array's elements
 are of the same type.
 
-'function' refers to usecode functions. In UCC, this can be the function name or
-its usecode number. For example: 'extern Bolt shape#(0x2D3) ();' can be passed
-as 'Bolt' (the function name), '0x2D3' (its function number since
+'function' refers to usecode functions, which *must* be declared with either,
+the shape# /or/ the object# specifiers. In UCC, this can be the function name
+or its usecode number. For example: 'extern Bolt shape#(0x2D3) ();' can be
+passed as 'Bolt' (the function name), '0x2D3' (its function number since
 'shape#(shnum) == shnum' if shnum < 0x400) or as '&Bolt' (using the 'address
 of' operator '&' to get the function number).
 
@@ -972,18 +973,19 @@ npc->set_npc_prop(string prop, int delta)
     when it is created. A list of property constants is included below
     'get_npc_prop' intrinsic description.
 
-int UI_apply_damage(int unk, int damage, int type, actor npc)
+int UI_apply_damage(int base, int hits, int type, actor npc)
 
-    Reduces the health of 'npc' by 'damage' hits; the damage type is specified
-    by 'type', and can be one of the following values:
+    Reduces the health of 'npc'. Total damage is random: a random integer from 1
+    to 1/3 of 'base' (round down) plus another random integer from 1 to 'hits'.
+    The damage is of type 'type', and can be one of the following values:
 
         normal      = 0    fire         = 1
         magic       = 2    lightning    = 3
         ethereal    = 4    sonic        = 5
 
-    'unk' is an unknown parameter which is ignored by Exult. If the target is
-    immune to the specified damage type, no damage will be applied; a creature
-    vulnerable to the damage type will take double damage. Always returns '1'
+    If the target is immune to the specified damage type, no damage will be
+    applied; a creature vulnerable to the damage type will take double damage.
+    Returns '1' if any damage is caused on a valid target, '0' otherwise.
 
 UI_reduce_health(actor npc, int damage, int type)
 npc->reduce_health(int damage, int type)
